Normal Node is not working after SOCK_COMPAT flag was added for vector values #68702

Closed
opened 2019-08-15 18:22:19 +02:00 by Charlie Jolly · 6 comments
Member

Blender: 2.81 since https://developer.blender.org/rB26911ba1e26b90d7fafcd2e877a52c55181896c1

This commit introduced a new SOCK_COMPACT flag.

This breaks the Normal node and possibly other nodes that have a vector with a PROP_DIRECTION subtype.

image.png

Simple fix is to just add the SOCK_COMPACT to the socket template but a proper fix should add a working unit vector widget button.

diff --git a/source/blender/nodes/shader/nodes/node_shader_normal.c b/source/blender/nodes/shader/nodes/node_shader_normal.c
index 074cc3dd87f..c6eaccaf7dd 100644
--- a/source/blender/nodes/shader/nodes/node_shader_normal.c
+++ b/source/blender/nodes/shader/nodes/node_shader_normal.c
@@ -25,7 +25,7 @@
 
 /* ****************NORMAL******************** */
 static bNodeSocketTemplate sh_node_normal_in[] = {
-    {SOCK_VECTOR, 1, N_("Normal"), 0.0f, 0.0f, 0.0f, 1.0f, -1.0f, 1.0f, PROP_DIRECTION},
+    {SOCK_VECTOR, 1, N_("Normal"), 0.0f, 0.0f, 0.0f, 1.0f, -1.0f, 1.0f, PROP_DIRECTION, SOCK_COMPACT},
     {-1, 0, ""},
 };
 

Blender: 2.81 since https://developer.blender.org/rB26911ba1e26b90d7fafcd2e877a52c55181896c1 This commit introduced a new SOCK_COMPACT flag. This breaks the Normal node and possibly other nodes that have a vector with a PROP_DIRECTION subtype. ![image.png](https://archive.blender.org/developer/F7666125/image.png) Simple fix is to just add the SOCK_COMPACT to the socket template but a proper fix should add a working unit vector widget button. ``` diff --git a/source/blender/nodes/shader/nodes/node_shader_normal.c b/source/blender/nodes/shader/nodes/node_shader_normal.c index 074cc3dd87f..c6eaccaf7dd 100644 --- a/source/blender/nodes/shader/nodes/node_shader_normal.c +++ b/source/blender/nodes/shader/nodes/node_shader_normal.c @@ -25,7 +25,7 @@ /* ****************NORMAL******************** */ static bNodeSocketTemplate sh_node_normal_in[] = { - {SOCK_VECTOR, 1, N_("Normal"), 0.0f, 0.0f, 0.0f, 1.0f, -1.0f, 1.0f, PROP_DIRECTION}, + {SOCK_VECTOR, 1, N_("Normal"), 0.0f, 0.0f, 0.0f, 1.0f, -1.0f, 1.0f, PROP_DIRECTION, SOCK_COMPACT}, {-1, 0, ""}, }; ```
Author
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly

Added subscribers: @JacquesLucke, @brecht, @dfelinto

Added subscribers: @JacquesLucke, @brecht, @dfelinto
Omar Emara was assigned by Dalai Felinto 2019-08-15 18:33:44 +02:00

@brecht @JacquesLucke since you reviewed the original patch want to look at this? I can confirm the issue was introduced in that commit.

@brecht @JacquesLucke since you reviewed the original patch want to look at this? I can confirm the issue was introduced in that commit.

Setting as high since we want this fixed before the next release.

Setting as high since we want this fixed before the next release.

This issue was referenced by 25f1783673

This issue was referenced by 25f1783673de636a6f0ca4457df8c05bc685981a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68702
No description provided.